[tool.poetry]
name = "homework-6"
version = "0.1.0"
description = ""
authors = ["Danny-progg <122675148+Danny-progg@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "homework_6"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
